# 4-in-a-row-game

./: .env.example  .gitignore  .gitignore.coverage  .pre-commit-config.yaml  .windsurf_config.yaml  .windsurfrules  Dockerfile  README.md  coverage.json  fix_naming.py  pyproject.toml  pytest.ini.backup  ruff.toml  setup_env.py  state.md  test_fixes.py  test_smart_coverage.py
.commands/: start-coding.md
.github/workflows/: ci.yml
docs/: TEMPLATE_sprint_checklist.md  TODO.4-in-a-row-game.0.md  TODO.4-in-a-row-game.1.md  TODO.4-in-a-row-game.2.md  TODO.4-in-a-row-game.3.md  development-workflow.md  game_design.md  game_specifications.md  smart-coverage-guide.md  state.md
scripts/: cli.py  validate_infrastructure.py
scripts/coverage/: contextual_coverage.py  coverage_ratchet.py  progressive_coverage.py  smart_coverage.py
src/four_in_a_row_game/: __init__.py  main.py
src/four_in_a_row_game/config/: __init__.py  game_settings.py
src/four_in_a_row_game/core/: __init__.py  constants.py  exceptions.py  game_engine.py
src/four_in_a_row_game/game/: board.py  connect_four_logic.py  game_state.py
src/four_in_a_row_game/ui/: renderer.py
tests/: conftest.py
tests/unit/: test_board.py  test_constants.py  test_exceptions.py  test_game_engine.py  test_game_settings.py
